--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,20 @@ body {
     padding: 0 15px;
 }
 
+.card img {
+    width: 24px;
+    height: 24px;
+    border: 1px solid #fff;
+    border-radius: 15%;
+    margin-right: 10px;
+}
+
+img.img-header {
+    width: 48px;
+    height: 48px;
+    margin: -25px 0 0 -10px;
+}
+
 .gold {
     color: #ddb100;
 }
@@ -56,20 +70,10 @@ a:hover {
     color: #a335ee;
 }
 
-.card img {
-    width: 24px;
-    height: 24px;
-    border: 1px solid #fff;
-    border-radius: 15%;
-    margin-right: 10px;
-}
-
-img.img-header {
-    width: 48px;
-    height: 48px;
-    margin: -25px 0 0 -10px;
-}
-
 .cheapest {
     border: 1px solid gold;
+}
+
+.modal {
+    color: #000;
 }
